# sakarinv

./: CHANGELOG.md  README.md  lose.art  sakari.art  sakarinv.cabal  sakarinv.hs  villapai.art  win.art
app/: sakarinv.hs
