cabal-version:      2.4
name:               sakarinv
version:            0.1.1.0

-- A short (one-line) description of the package.
-- synopsis: Sakarin villapaitapelin kosto

-- A longer description of the package.
-- description: svp cli remix 2023

-- A URL where users can report bugs.
-- bug-reports: 

-- The license under which the package is released.
-- license: https://github.com/ramla/sakarinv/issues

-- The package author(s).
-- author: Visa Lehtimäki

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer: 

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    -- exposed-modules: 

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- build-depends:    base ^>=4.16.4.0, random, no-buffering-workaround, ansi-terminal
    hs-source-dirs:   src
    default-language: Haskell2010

executable sakarinv
    main-is:          sakarinv.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, sakarinv, random, no-buffering-workaround, ansi-terminal, terminal-size

    hs-source-dirs:   app
    default-language: Haskell2010
